***********************************************************
**********| Version 2.4.2 - Released 2014-06-25 |**********
***********************************************************

* dob bugfix and refactoring the method of input
* added validation of vat id and phone number
* added merchant cunsumer id
* changes in language files

***********************************************************
**********| Version 2.4.1 - Released 2014-06-04 |**********
***********************************************************

* bugfix in Payment Query configuration

***********************************************************
**********| Version 2.4.0 - Released 2014-04-30 |**********
***********************************************************

* added Payment Query
* extended Whitelabel mode
* fixed company-name xml tag in customer block
* removed deprecated http-header-list block in xml head
* removed agreement box (invoice/installment); not needed anymore

***********************************************************
**********| Version 2.3.0 - Released 2014-04-01 |**********
***********************************************************

* inplementation of Device Ident within main footer
* added separat upgrade file for each release version - solves troubles in case of modul updates
* added Whitelabel mode

***********************************************************
**********| Version 2.2.3 - Released 2014-02-13 |**********
***********************************************************

* minor changes in the checkout layout

***********************************************************
**********| Version 2.2.2 - Released 2014-02-06 |**********
***********************************************************

* IBAN validation without JS

***********************************************************
**********| Version 2.2.1 - Released 2014-01-30 |**********
***********************************************************

* improved IBAN validation