@@ -24,8 +24,9 @@
     <sections>
         <payment>
             <groups>
-                <ratepay_rechnung module="ratepay">
-                    <label>RatePAY Rechnung</label>
+                <!--
+                <ratepay_paymentquery module="ratepay">
+                    <label>RatePAY Integrierte Bezahlsteuerung (IBS)</label>
                     <sort_order>680</sort_order>
                     <show_in_default>1</show_in_default>
                     <show_in_website>1</show_in_website>
@@ -33,6 +34,135 @@
                     <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
                     <fields>
 
+                        <version translate="label">
+                            <label>v2.4.2</label>
+                            <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
+                            <frontend_type>label</frontend_type>
+                            <sort_order>-1</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </version>
+
+                        <active translate="label">
+                            <label>Pi Enabled</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>adminhtml/system_config_source_yesno</source_model>
+                            <sort_order>1</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </active>
+
+                        <specificcountry translate="label">
+                            <label>Pi Specific countries</label>
+                            <frontend_type>multiselect</frontend_type>
+                            <sort_order>4</sort_order>
+                            <source_model>ratepay/source_rechnung_countries</source_model>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </specificcountry>
+
+                        <specificcurrency translate="label">
+                            <label>Pi Specific currencies</label>
+                            <frontend_type>multiselect</frontend_type>
+                            <sort_order>5</sort_order>
+                            <source_model>ratepay/source_rechnung_currency</source_model>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </specificcurrency>
+
+                        <profile_id translate="label">
+                            <label>Pi Profile-Id</label>
+                            <frontend_type>text</frontend_type>
+                            <sort_order>6</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </profile_id>
+
+                        <security_code translate="label">
+                            <label>Pi Security Code</label>
+                            <frontend_type>text</frontend_type>
+                            <sort_order>7</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </security_code>
+
+                        <sandbox translate="label">
+                            <label>Pi Activate Sandbox</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>adminhtml/system_config_source_yesno</source_model>
+                            <sort_order>13</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </sandbox>
+
+                        <logging translate="label">
+                            <label>Pi Activate Logging</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>adminhtml/system_config_source_yesno</source_model>
+                            <sort_order>25</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </logging>
+
+                        <b2c translate="label">
+                            <label>Pi B2C</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>ratepay/system_config_source_dropdown_values</source_model>
+                            <sort_order>26</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </b2c>
+
+                        <b2b translate="label">
+                            <label>Pi B2B</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>ratepay/system_config_source_dropdown_values</source_model>
+                            <sort_order>30</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </b2b>
+
+                        <delivery_address_b2c translate="label">
+                            <label>Pi Delivery Address B2C</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>ratepay/system_config_source_dropdown_values</source_model>
+                            <sort_order>32</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </delivery_address_b2c>
+
+                        <delivery_address_b2b translate="label">
+                            <label>Pi Delivery Address B2B</label>
+                            <frontend_type>select</frontend_type>
+                            <source_model>ratepay/system_config_source_dropdown_values</source_model>
+                            <sort_order>35</sort_order>
+                            <show_in_default>1</show_in_default>
+                            <show_in_website>1</show_in_website>
+                            <show_in_store>1</show_in_store>
+                        </delivery_address_b2b>
+
+                    </fields>
+                </ratepay_paymentquery>
+                -->
+                <ratepay_rechnung module="ratepay">
+                    <label>RatePAY Rechnung</label>
+                    <sort_order>690</sort_order>
+                    <show_in_default>1</show_in_default>
+                    <show_in_website>1</show_in_website>
+                    <show_in_store>1</show_in_store>
+                    <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
+                    <fields>
                         <version translate="label">
                             <label>v2.4.2</label>
                             <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
@@ -229,7 +359,7 @@
                 </ratepay_rechnung>
                 <ratepay_rate module="ratepay">
                     <label>RatePAY Rate</label>
-                    <sort_order>690</sort_order>
+                    <sort_order>700</sort_order>
                     <show_in_default>1</show_in_default>
                     <show_in_website>1</show_in_website>
                     <show_in_store>1</show_in_store>
@@ -451,7 +581,7 @@
                 </ratepay_rate>
                 <ratepay_directdebit module="ratepay">
                     <label>RatePAY SEPA-Lastschrift</label>
-                    <sort_order>700</sort_order>
+                    <sort_order>710</sort_order>
                     <show_in_default>1</show_in_default>
                     <show_in_website>1</show_in_website>
                     <show_in_store>1</show_in_store>
@@ -648,7 +778,7 @@
                             <show_in_store>1</show_in_store>
                         </privacy_policy>
 
-                        <!--<bankdata_saving>
+                        <bankdata_saving>
                             <label>Pi Save bank data</label>
                             <frontend_type>select</frontend_type>
                             <source_model>adminhtml/system_config_source_yesno</source_model>
@@ -656,138 +786,9 @@
                             <show_in_default>1</show_in_default>
                             <show_in_website>1</show_in_website>
                             <show_in_store>1</show_in_store>
-                        </bankdata_saving>-->
+                        </bankdata_saving>
                     </fields>
                 </ratepay_directdebit>
-                <ratepay_paymentquery module="ratepay">
-                    <label>RatePAY Integrierte Bezahlsteuerung (IBS)</label>
-                    <sort_order>680</sort_order>
-                    <show_in_default>1</show_in_default>
-                    <show_in_website>1</show_in_website>
-                    <show_in_store>1</show_in_store>
-                    <comment><![CDATA[<a href="http://www.ratepay.com/nutzungsbedingungen/" target="_blank">Nutzungsbedingungen</a>]]></comment>
-                    <fields>
-
-                        <version translate="label">
-                            <label>v2.4.2</label>
-                            <frontend_model>adminhtml/system_config_form_field_heading</frontend_model>
-                            <frontend_type>label</frontend_type>
-                            <sort_order>-1</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </version>
-
-                        <active translate="label">
-                            <label>Pi Enabled</label>
-                            <frontend_type>select</frontend_type>
-                            <source_model>adminhtml/system_config_source_yesno</source_model>
-                            <sort_order>1</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </active>
-
-                        <specificcountry translate="label">
-                            <label>Pi Specific countries</label>
-                            <frontend_type>multiselect</frontend_type>
-                            <sort_order>4</sort_order>
-                            <source_model>ratepay/source_rechnung_countries</source_model>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </specificcountry>
-
-                        <specificcurrency translate="label">
-                            <label>Pi Specific currencies</label>
-                            <frontend_type>multiselect</frontend_type>
-                            <sort_order>5</sort_order>
-                            <source_model>ratepay/source_rechnung_currency</source_model>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </specificcurrency>
-
-                        <profile_id translate="label">
-                            <label>Pi Profile-Id</label>
-                            <frontend_type>text</frontend_type>
-                            <sort_order>6</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </profile_id>
-
-                        <security_code translate="label">
-                            <label>Pi Security Code</label>
-                            <frontend_type>text</frontend_type>
-                            <sort_order>7</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </security_code>
-
-                        <sandbox translate="label">
-                            <label>Pi Activate Sandbox</label>
-                            <frontend_type>select</frontend_type>
-                            <source_model>adminhtml/system_config_source_yesno</source_model>
-                            <sort_order>13</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </sandbox>
-
-                        <logging translate="label">
-                            <label>Pi Activate Logging</label>
-                            <frontend_type>select</frontend_type>
-                            <source_model>adminhtml/system_config_source_yesno</source_model>
-                            <sort_order>25</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </logging>
-
-                        <b2c translate="label">
-                            <label>Pi B2C</label>
-                            <frontend_type>select</frontend_type>
-                            <source_model>ratepay/system_config_source_dropdown_values</source_model>
-                            <sort_order>26</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </b2c>
-
-                        <b2b translate="label">
-                            <label>Pi B2B</label>
-                            <frontend_type>select</frontend_type>
-                            <source_model>ratepay/system_config_source_dropdown_values</source_model>
-                            <sort_order>30</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </b2b>
-
-                        <delivery_address_b2c translate="label">
-                            <label>Pi Delivery Address B2C</label>
-                            <frontend_type>select</frontend_type>
-                            <source_model>ratepay/system_config_source_dropdown_values</source_model>
-                            <sort_order>32</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </delivery_address_b2c>
-
-                        <delivery_address_b2b translate="label">
-                            <label>Pi Delivery Address B2B</label>
-                            <frontend_type>select</frontend_type>
-                            <source_model>ratepay/system_config_source_dropdown_values</source_model>
-                            <sort_order>35</sort_order>
-                            <show_in_default>1</show_in_default>
-                            <show_in_website>1</show_in_website>
-                            <show_in_store>1</show_in_store>
-                        </delivery_address_b2b>
-
-                    </fields>
-                </ratepay_paymentquery>
             </groups>
         </payment>
          <sales_pdf>
